# dakota

./: .gdbinit-darwin  .gdbinit-linux  .gitattributes  .gitignore  CMakeLists.txt  INSTALL  Makefile  build-depend-graph.pl  build-exhaustive-all-install-iterative.sh  build-exhaustive-all-targets-serial.sh  build-exhaustive-all-targets.sh  build-exhaustive-all.sh  build-exhaustive-targets-serial.sh  build-exhaustive-targets.sh  build-release.sh  build.dot  build.mk  clean.sh  cmake-build-all-install.sh  cmake.sh  common-cc.cmake  common.cmake  common.mk  common.sh  config-darwin-clang.mk  config-darwin-gcc.mk  config-darwin.h  config-darwin.hh  config-darwin.mk  config-darwin.sh  config-linux-clang.mk  config-linux-gcc.mk  config-linux.hh  config-linux.sh  config.mk~  config.sh~  configure  configure-common  configure-darwin  configure-darwin-apple-clang  (+31 more)
dakota/: CMakeLists.txt  Makefile  ascii-number-klass.dk  ascii-number.dk  build  build-all.sh  build-clean.sh  build-default.sh  build-install.sh  build-vars.cmake  build-vars.yaml  build.sh  build.yaml  clean-all.sh  cmake-build-exhaustive.sh  cmake-clean.sh  cmake-configure.sh  common.cmake  common.cmk  dakota.build  dakota.cmake  dakota.dk  dakota.mk  dakota.project  default.build  dimension.dk  float.dk  graph.dk  hashed-counted-set.dk  hashed-set.dk  hashed-table.dk  input-file.dk  json-object-output-stream.dk  json-parser.dk  lexer.dk  libdakota.build  libdakota.dk  make.sh  open-token.dk  output-file.dk  (+11 more)
dakota-catalog/: CMakeLists.txt  Makefile  build  build-vars.cmake  build-vars.yaml  build.mk  build.yaml  dakota-catalog.build  dakota-catalog.cc  dakota.build  dakota.cmake  dakota.mk  dakota.project  default.build  pathname-for-handle.cc  pathname-for-handle.hh  spawn.cc
dakota-core/: CMakeLists.txt  Makefile  autorelease-pool.dk  bit-vector.dk  boole.dk  build  build-vars.cmake  build-vars.yaml  build.yaml  char.dk  collection.dk  compare.dk  config-darwin.hh  config-linux.hh  const-info.dk  core-hier.dot  core-runtime.dot  core.dk  counted-set.dk  dakota-core.build  dakota-core.dk  dakota-rt-private.h  dakota-rt-private.hh  dakota.build  dakota.cmake  dakota.dk  dakota.mk  dakota.project  default.build  deque.dk  dl.dk  dl.hh  element-already-present-exception.dk  enum-info.dk  equal-func.dk  equal-predicate.dk  equal.dk  exception.dk  exe-type.dk  ffstr.dk  (+72 more)
dakota-core/port/compiler-default-argument-promotions/: Makefile  char-is-signed.cc  generate-compiler-default-argument-promotions.pl  types.hh
doc/: bib.txt  (+105 more)
src/: .gdbinit  .gitignore  CMakeLists.txt  CURRENT-TEST.sh  Makefile  aaa.pl  ascii-number-klass.dk  ascii-number.dk  assoc.dk  autorelease-pool.dk  bit-vector.dk  boole.dk  char.dk  char16.dk  char32.dk  char8.dk  check-exes.mk  check-rewriting.sh  check.mk  check.sh  clean.sh  code-gen-info.pl  collection.dk  config-darwin.hh  config-linux.hh  const-info.dk  construct.dk  convert.sh  counted-set.dk  cstring.dk  current-lib.sh  dakota-catalog-project.json  dakota-catalog.build  dakota-catalog.cc  dakota-declare-klass-type.h  dakota-declare-klass-type.hh  dakota-dummy.h  dakota-dummy.hh  dakota-info-main.cc  dakota-info-project.json  (+192 more)
src/compare/: Makefile
src/doc/: add-method-for-selector.txt  add-remove.txt  c-preprocessor.txt  code-gen-axes.txt  compilation-stages.txt  djb-comments.txt  djb2.txt  gcc-specs.txt  generic-function-uses.cc  how-to-make-simple-singletons.txt  interesting-apis.txt  json-mk-syntax.txt  keyword-args-rhs.txt  klass-hierarchy-collection-immutable.txt  klass-hierarchy-collection-mutable.txt  klass-hierarchy-collection.txt  literal-table-expansion.dk  message-syntax.txt  method-memory-footprint.txt  method-types.txt  module-system-example.txt  mutable-klasses.txt  passing-non-pod-type-to-vararg-function.txt  python-formatted-printing.txt  refactor-notes.txt  rewrite-notes.txt  shared-libraries.txt  slots-translations.txt  symbol-syntax.txt  todo-2.txt  todo.txt
src/doc/code-gen/: comments-nrt.txt  comments-rt.txt
src/exported-method-code-gen/: Makefile  exported-method-code-gen.cc
src/generated-file-names/exe/: Makefile  exe.dk
src/generated-file-names/lib/: Makefile
src/home/.dakota/: .bashrc  .gdbinit  dakota-mode.el
src/home/other/: dakota-mode.el  dakota-mode.el-other
src/ideas/designated-initializers/: exe.c
src/ideas/enum-slots-t/: my-xsocket-type.cc  my-xsocket-type.dk
src/ideas/init-with-slots-wrapper/: example.dk
src/ideas/is-pod/: Makefile  algorithm.h
src/ideas/switch-supporting-string-constants/: Makefile  duration.h  example-in.cc  example-out.cc  exe.cc  gen-mph-func.pl  mph.h  rn--mph_00.strs  rn--mph_01.strs  switch-rewriting.pl  time-mph_00.cc  use-case-1.dk  use-case-3.dk  use-case-4.dk
src/ideas/template-methods/: exe.cc
src/ideas/tuples/: tuples.cc
src/junk/: convert.sh
src/lexer/: Makefile  exe.dk  gen-ops-state-machine.pl  ops-dk.txt
src/macro-system/: Makefile  all-macros.dk  macro-syntax-fsm.dot  macro-system-parser.pl  macro-system.pl
src/macro-system-parser/: Makefile  all-macros.dk  all.dk  bash-parameter-expansion.txt  ident.dot  macro-syntax-fsm.dot  macro-system-parser.pl  notes.txt  pattern-var-syntax-fsm.dot
src/macro-system-parser/old/: areas-of-application.txt  dakota-macros.dk  macro-system-generator.pl  semantics.txt  top-level-state-machine.dot
src/macro-system/old/: dakota-macros.dk  dakota-macros.txt  for-in.dk  rewrite.dk
src/misc/: box+unbox.cc  dk-ctlg-opts-main.cc  ff-str-example.cc  rewrite.dkm
src/other/compare/: Makefile  compare.pl
src/other/gen-src-summary/: make.sh
src/other/ideas/: Makefile
src/other/lexer/: .gdbinit  Makefile  bugs.txt  exe.dk  gen-ops-state-machine.sh  keywords-c++.txt  keywords-dk.txt  ops-c++.txt  ops-c.txt
src/proofs/: Makefile  overview.html  rules.mk  targets.mk  vars.mk
src/setjmp-longjmp-exceptions/: exception-context.dk  xjmp-buf.dk  xsigjmp-buf.dk
src/todo/: designated-initializer-syntactic-sugar.cc  float-sizes.cc  immutable-unbox.cc  padded-slots.cc  util.dk
src/try-handler/: exception.h  gen-throw-examples.pl  handler-context.dk  try-catch.dk
(+1337 files in other folders)
