# -*- mode: cmake -*-
cmake_minimum_required (VERSION 3.9)
set (project dakota-core-project)
project (${project} LANGUAGES CXX)
set (target-ast dakota-core-target-ast)
set (target-hdr dakota-core-target-hdr)
if (NOT root-source-dir)
  set (root-source-dir ${CMAKE_CURRENT_SOURCE_DIR}/..)
endif ()
include (${CMAKE_CURRENT_SOURCE_DIR}/build-vars.cmake)
include (${root-source-dir}/lib/dakota/base.cmake)
include (${CMAKE_CURRENT_SOURCE_DIR}/install.cmake)

add_dependencies (     dakota-core dakota-dso dakota-catalog)
target_link_libraries (dakota-core dakota-dso)
