# -*- mode: cmake -*-
cmake_minimum_required (VERSION 3.9)
set (project dakota-project)
project (${project} LANGUAGES CXX)
set (parts-yaml dakota-parts-yaml)
set (target-ast dakota-target-ast)
set (target-hdr dakota-target-hdr)
if (NOT root-source-dir)
  set (root-source-dir ${CMAKE_CURRENT_SOURCE_DIR}/..)
endif ()
set (current-source-build-vars ${CMAKE_CURRENT_SOURCE_DIR}/build-vars.cmake)
include (${current-source-build-vars})
include (${root-source-dir}/lib/dakota/base.cmake)

add_dependencies (     dakota ${target-lib-names})
target_link_libraries (dakota ${target-lib-names})
